--- a/package.json
+++ b/package.json
@@ -1,34 +1,80 @@
 {
-    "name": "all_the_small_things_main",
-    "version": "1.0.0",
-    "description": "<!DOCTYPE html> <html> <head> \t<meta name=\"viewport\" content=\"width=device-width\" /> \t<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" /> \t<title>WordPress &#8250; お読みください</title> \t<link rel=\"stylesheet\" href=\"wp-admin/css/install.css?ver=20100228\" type=\"text/css\" /> </head> <body> <h1 id=\"logo\"> \t<a href=\"https://wordpress.org/\"><img alt=\"WordPress\" src=\"wp-admin/images/wordpress-logo.png\" /></a> \t<br /> Version 4.5.3 </h1> <p style=\"text-align: center\">セマンティックな個人情報発信プラットフォーム</p>",
-    "main": "gulpfile.js",
-    "dependencies": {
-        "browser-sync": "^2.18.2",
-        "browserify": "^13.1.1",
-        "del": "^2.2.2",
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^3.1.1",
-        "gulp-changed": "^1.3.2",
-        "gulp-connect-php": "0.0.8",
-        "gulp-cssmin": "^0.1.7",
-        "gulp-imagemin": "^3.1.1",
-        "gulp-plumber": "^1.1.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-sass": "^3.0.0",
-        "gulp-sftp": "^0.1.5",
-        "gulp-sourcemaps": "^1.9.1",
-        "gulp-uglify": "^2.0.0",
-        "gulp-util": "^3.0.7",
-        "imagemin-pngquant": "^5.0.0",
-        "jquery": "^3.1.1",
-        "vinyl-ftp": "^0.5.0",
-        "vinyl-source-stream": "^1.1.0"
-    },
-    "devDependencies": {},
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC"
+  "name": "kojiyamauchi",
+  "version": "1.0.0",
+  "main": "example.js",
+  "dependencies": {
+    "global": "^4.3.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-riot": "^1.1.0",
+    "babel-runtime": "^6.26.0",
+    "browser-sync": "^2.18.8",
+    "chroma-js": "^1.3.3",
+    "css-loader": "^0.28.7",
+    "d3": "^4.12.0",
+    "dat.gui": "^0.6.1",
+    "del": "^2.2.2",
+    "emergence.js": "^1.1.2",
+    "eslint": "^4.11.0",
+    "eslint-formatter-pretty": "^1.3.0",
+    "exports-loader": "^0.6.4",
+    "gulp": "^3.9.1",
+    "gulp-changed": "^3.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect-php": "1.0.0",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-ejs": "^3.0.1",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-prettify": "^0.5.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sass-glob": "^1.0.8",
+    "gulp-sftp": "^0.1.5",
+    "gulp-sourcemaps": "^2.6.0",
+    "gulp-svgmin": "^1.2.4",
+    "gulp-uglify": "^2.1.2",
+    "gulp-util": "^3.0.8",
+    "imagemin-pngquant": "^5.0.0",
+    "imports-loader": "^0.7.1",
+    "jquery": "^3.2.1",
+    "lazysizes": "^4.0.1-beta1",
+    "material-design-lite": "^1.3.0",
+    "moment": "^2.19.1",
+    "node-sass": "^4.7.2",
+    "npm-check-updates": "^2.11.0",
+    "postcss-flexbugs-fixes": "^3.2.0",
+    "riot": "^3.7.4",
+    "riot-route": "^3.1.1",
+    "riot-tag-loader": "^1.0.0",
+    "riotcontrol": "0.0.3",
+    "sass-loader": "^6.0.6",
+    "stats.js": "^0.17.0",
+    "styled-components": "^2.1.0",
+    "three": "^0.85.2",
+    "vinyl-ftp": "^0.6.0",
+    "webpack": "^2.6.1",
+    "webpack-merge": "^4.1.1",
+    "webpack-stream": "^3.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "kojiyamauchi <all.the.small.things@me.com>",
+  "license": "ISC",
+  "description": "",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "repository": "git@github.com:kojiyamauchi/koji-yamauchi.com_main.git"
 }
