--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-gulpfile.js
 .DS_Store
 node_modules/
+readme.html
+wp-includes/
+wp-admin/
+wp-content/languages/
+wp-content/plugins/
+wp-content/upgrade/
+wp-content/uploads/
+wp-activate.php
+wp-cron.php
+wp-load.php
+wp-login.php
+wp-settings.php
+wp-signup.php
+wp-trackback.php
+xmlrpc.php
+wp-mail.php
+wp-links-opml.php
+wp-config.php
+wp-config-sample.php
+wp-comments-post.php
+wp-blog-header.php
+license.txt
+index.php
